--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -1,24 +1,24 @@
 #logs {
-	width: 100%;
-	height: 120 dp;
+    width: 100%;
+    height: 120 dp;
 }
 #lists {
-	width: 100%;
-	height: 240 dp;
+    width: 100%;
+    height: 240 dp;
 }
 
 #inputText {
-	width: 60%;
-	height: auto;
+    width: 60%;
+    height: auto;
 }
 
 .inlineBlock {
-	display: inline-block;
+    display: inline-block;
 }
 
 #addButton {
-	width: 30%;
-	height: 2em;
+    width: 30%;
+    height: 2em;
 }
 
 .ui-block-d img {
@@ -26,13 +26,8 @@
     height: 57px;
 }
 
-
-
-
-
-
-
-
-
-
+.ui-grid-c div {
+    height: 90px;
+    text-align: center;
+}
 
