album module start

--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -52,9 +52,17 @@
     text-align: center;
 }
 
+.clearfix {
+	clear:both;
+}
 
+.hidden {
+	display:none;
+}
 
-
+.show {
+	display: block;
+}
 
 
 
